[gd_scene load_steps=6 format=3 uid="uid://cqslop8oktq1j"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_lbhxa"]
[ext_resource type="Texture2D" uid="uid://chyuge1yvhem3" path="res://assets/temporary/github-mark.png" id="2_jk186"]
[ext_resource type="Texture2D" uid="uid://vwfwkf8w4pma" path="res://assets/temporary/artist.png" id="3_d2ehc"]
[ext_resource type="Texture2D" uid="uid://we1l5fu5ellt" path="res://assets/temporary/test.png" id="4_8yhvj"]

[sub_resource type="Theme" id="Theme_kmcbc"]
Button/colors/font_color = Color(0.727817, 0.123842, 0.723654, 1)
Button/colors/font_outline_color = Color(0.853177, 0.796212, 0.950273, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 6.28319
mouse_force_pass_scroll_events = false
script = ExtResource("1_lbhxa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 147.0
offset_top = 2.0
offset_right = 946.0
offset_bottom = 649.0
rotation = -6.28319
mouse_filter = 0
mouse_force_pass_scroll_events = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_kmcbc")
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
tooltip_text = "Play"
text = "Play"

[node name="Volume" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Volume"

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/Volume"]
layout_mode = 2
text = "Volume"

[node name="Slider" type="HSlider" parent="MarginContainer/VBoxContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/Volume"]
layout_mode = 2
text = "0"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = ":("
text = "Exit"

[node name="Links" type="MarginContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -208.0
offset_right = 727.0
grow_vertical = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="Links"]
layout_mode = 2
size_flags_vertical = 8

[node name="Github" type="Button" parent="Links/HBoxContainer"]
layout_mode = 2
tooltip_text = "Github"
icon = ExtResource("2_jk186")

[node name="Artist" type="Button" parent="Links/HBoxContainer"]
layout_mode = 2
tooltip_text = "Artist"
icon = ExtResource("3_d2ehc")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Test" type="Button" parent="Links/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Test"
icon = ExtResource("4_8yhvj")
icon_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer2"]

[connection signal="focus_entered" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_focus_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume/Slider" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Links/HBoxContainer/Github" to="." method="_on_github_pressed"]
[connection signal="pressed" from="Links/HBoxContainer/Artist" to="." method="_on_artist_pressed"]
[connection signal="pressed" from="Links/HBoxContainer/Test" to="." method="_on_test_pressed"]
